# controllers/Usuario_controlador.go
@@ -1,22 +1,22 @@
 package controllers
 
 import (
-	"go-API/services"
-	"net/http"
+    "go-API/services"
+    "go-API/models"
+    "go-API/request"
+    "net/http"
 
-	"go-API/models"
-
-	"github.com/gin-gonic/gin"
+    "github.com/gin-gonic/gin"
 )
 
-// UnidadControlador maneja las rutas relacionadas con las unidades.
+// UsuarioControlador maneja las rutas relacionadas con los usuarios.
 type UsuarioControlador struct {
-	servicio *services.UsuarioService
+    servicio *services.UsuarioService
 }
 
-// NewUnidadControlador crea un nuevo controlador para las unidades.
+// NewUsuarioControlador crea un nuevo controlador para los usuarios.
 func NewUsuarioControlador(servicio *services.UsuarioService) *UsuarioControlador {
-	return &UsuarioControlador{servicio: servicio}
+    return &UsuarioControlador{servicio: servicio}
 }
 
 // ObtenerUsuarios obtiene todos los usuarios.
@@ -29,15 +29,15 @@ func NewUsuarioControlador(servicio *services.UsuarioService) *UsuarioControlado
 // @Failure 500 {object} response.ErrorResponse
 // @Router /api/usuarios [get]
 func (uc *UsuarioControlador) ObtenerUsuarios(c *gin.Context) {
-	usuarios, err := uc.servicio.ObtenerUsuarios()
-	if err != nil {
-		c.JSON(
-			500,
-			gin.H{"error": err.Error()},
-		)
-		return
-	}
-	c.JSON(200, usuarios)
+    usuarios, err := uc.servicio.ObtenerUsuarios()
+    if err != nil {
+        c.JSON(
+            500,
+            gin.H{"error": err.Error()},
+        )
+        return
+    }
+    c.JSON(200, usuarios)
 }
 
 // CrearUsuario maneja la creación de un nuevo usuario.
@@ -52,46 +52,55 @@ func (uc *UsuarioControlador) ObtenerUsuarios(c *gin.Context) {
 // @Failure 500 {object} response.ErrorResponse
 // @Router /api/usuarios [post]
 func (uc *UsuarioControlador) CrearUsuario(c *gin.Context) {
-	var usuario models.Usuario
+    var input request.CreateUsuarioRequest
 
-	// Validar los datos enviados en la solicitud
-	if err := c.ShouldBindJSON(&usuario); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Datos inválidos: " + err.Error()})
-		return
-	}
+    // Validar los datos enviados en la solicitud
+    if err := c.ShouldBindJSON(&input); err != nil {
+        c.JSON(http.StatusBadRequest, gin.H{"error": "Datos inválidos: " + err.Error()})
+        return
+    }
 
-	// Llamar al servicio para crear el usuario
-	result, err := uc.servicio.CrearUsuario(&usuario)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
+    // Crear el objeto Usuario
+    usuario := models.Usuario{
+        Nombre:   input.Nombre,
+        Email:    input.Email,
+        Password: input.Password,
+    }
 
-	c.JSON(http.StatusOK, gin.H{"inserted_id": result.InsertedID})
+    // Llamar al servicio para crear el usuario
+    result, err := uc.servicio.CrearUsuario(&usuario)
+    if err != nil {
+        c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+        return
+    }
+
+    c.JSON(http.StatusCreated, gin.H{"inserted_id": result})
 }
 
-// ObtenerUsuarioPorID obtiene un usuario por su ID.
-// @Summary Obtener un usuario por ID
-// @Description Devuelve un usuario en específico por su ID
+// ObtenerUsuarioPorCorreoYContrasena obtiene un usuario por su correo y contraseña.
+// @Summary Obtener un usuario por correo y contraseña
+// @Description Devuelve un usuario en específico por su correo y contraseña
 // @Tags Usuarios
 // @Accept json
 // @Produce json
-// @Param id path string true "ID del usuario"
+// @Param email query string true "Correo del usuario"
+// @Param password query string true "Contraseña del usuario"
 // @Success 200 {object} models.Usuario
 // @Failure 500 {object} response.ErrorResponse
-// @Router /api/usuarios/{id} [get]
-func (uc *UsuarioControlador) ObtenerUsuarioPorID(c *gin.Context) {
-	id := c.Param("id")
+// @Router /api/usuarios/usuario [get]
+func (uc *UsuarioControlador) ObtenerUsuarioPorCorreoYContrasena(c *gin.Context) {
+    email := c.Query("email")
+    password := c.Query("password")
 
-	usuario, err := uc.servicio.ObtenerUsuarioPorID(id)
-	if err != nil {
-		c.JSON(
-			500,
-			gin.H{"error": err.Error()},
-		)
-		return
-	}
-	c.JSON(200, usuario)
+    usuario, err := uc.servicio.ObtenerUsuarioPorCorreoYContrasena(email, password)
+    if err != nil {
+        c.JSON(
+            500,
+            gin.H{"error": err.Error()},
+        )
+        return
+    }
+    c.JSON(200, usuario)
 }
 
 // InscribirseACurso permite que un usuario se inscriba en un curso.
@@ -106,25 +115,22 @@ func (uc *UsuarioControlador) ObtenerUsuarioPorID(c *gin.Context) {
 // @Failure 500 {object} response.ErrorResponse
 // @Router /api/usuarios/inscripcion [post]
 func (uc *UsuarioControlador) InscribirseACurso(c *gin.Context) {
-	var inscripcion struct {
-		UsuarioID string `json:"usuario_id"`
-		CursoID   string `json:"curso_id"`
-	}
+    var inscripcion request.InscripcionRequest
 
-	// Validar los datos enviados en la solicitud
-	if err := c.ShouldBindJSON(&inscripcion); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Datos inválidos: " + err.Error()})
-		return
-	}
+    // Validar los datos enviados en la solicitud
+    if err := c.ShouldBindJSON(&inscripcion); err != nil {
+        c.JSON(http.StatusBadRequest, gin.H{"error": "Datos inválidos: " + err.Error()})
+        return
+    }
 
-	// Llamar al servicio para inscribir al usuario en el curso
-	err := uc.servicio.InscribirseACurso(inscripcion.UsuarioID, inscripcion.CursoID)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
+    // Llamar al servicio para inscribir al usuario en el curso
+    err := uc.servicio.InscribirseACurso(inscripcion.Email, inscripcion.Password, inscripcion.CursoID)
+    if err != nil {
+        c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+        return
+    }
 
-	c.JSON(http.StatusOK, gin.H{"message": "Inscripción exitosa"})
+    c.JSON(http.StatusOK, gin.H{"message": "Inscripción exitosa"})
 }
 
 // ObtenerCursosInscritos obtiene los cursos en los que un usuario está inscrito.
@@ -133,20 +139,22 @@ func (uc *UsuarioControlador) InscribirseACurso(c *gin.Context) {
 // @Tags Usuarios
 // @Accept json
 // @Produce json
-// @Param id path string true "ID del usuario"
+// @Param email query string true "Correo del usuario"
+// @Param password query string true "Contraseña del usuario"
 // @Success 200 {array} models.Curso
 // @Failure 500 {object} response.ErrorResponse
-// @Router /api/usuarios/{id}/cursos [get]
+// @Router /api/usuarios/cursos [get]
 func (uc *UsuarioControlador) ObtenerCursosInscritos(c *gin.Context) {
-	id := c.Param("id")
+    email := c.Query("email")
+    password := c.Query("password")
 
-	cursos, err := uc.servicio.ObtenerCursosInscritos(id)
-	if err != nil {
-		c.JSON(
-			500,
-			gin.H{"error": err.Error()},
-		)
-		return
-	}
-	c.JSON(200, cursos)
+    cursos, err := uc.servicio.ObtenerCursosInscritos(email, password)
+    if err != nil {
+        c.JSON(
+            500,
+            gin.H{"error": err.Error()},
+        )
+        return
+    }
+    c.JSON(200, cursos)
 }
