# models/Usuario.go
@@ -6,8 +6,8 @@ import (
 
 // Usuario representa un usuario que puede inscribirse en cursos
 type Usuario struct {
-	ID        primitive.ObjectID   `bson:"_id,omitempty" json:"id"`
 	Nombre    string               `bson:"nombre" json:"nombre"`
+	Password   string               `bson:"password" json:"password"`
 	Email     string               `bson:"email" json:"email"`
 	Inscritos []primitive.ObjectID `bson:"inscritos" json:"inscritos"` // IDs de cursos inscritos
 }
